--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <br>
       <small>Um guia para leigos sobre pensar como um autoconsciente de c&#xE9;rebro pequeno</small>
     </h1>
+    <small>Traduzido do original em: <a href="https://grugbrain.dev">The Grug Brained Developer</a></small>
 
     <h1 id="introdu%C3%A7%C3%A3o">Introdu&#xE7;&#xE3;o</h1>
 
