--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h1>
       O Desenvolvedor C&#xE9;rebro Grug
       <br>
-      <small>Um guia para leigos sobre pensar como um autoconsciente de c&#xE9;rebro pequeno</small>
+      <small>Um guia para leigos sobre pensar como alguém auto-consciente de seu c&#xE9;rebro pequeno</small>
     </h1>
     <small>Traduzido do original em: <a href="https://grugbrain.dev">The Grug Brained Developer</a></small>
 
